# LeagueOfGains

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.md  LeagueOfGains_example.cfg  README.md  vcpkg.json
scripts/: resetCommands.py
server/: CMakeLists.txt  DppLinkFix.cpp  main.cpp
server/commands/: CommandSystem.h
server/commands/impl/: Complete.h  ForceFetch.h  Leaderboard.h  Link.h  Penance.h  Reroll.h  Stats.h  Wimp.h
server/core/: AppContext.h  FileReader.h  TaskManager.cpp  TaskManager.h  ThreadsafeQueue.h
server/database/: Database.cpp  Database.h
server/discord/: Bot.cpp  Bot.h
server/riot/: RateLimiter.h  RiotClient.cpp  RiotClient.h
